--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Luvel
-APP_ENV=prod
+APP_ENV=production
 APP_KEY=base64:BP44hGiPB6mm7dMgnbPjoOe6YxvtCmKZBA1Q5TLLXSY=
 APP_DEBUG=true
 APP_URL=https://luvel.herokuapp.com/
