--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Luvel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:BP44hGiPB6mm7dMgnbPjoOe6YxvtCmKZBA1Q5TLLXSY=
 APP_DEBUG=true
-APP_URL=https://luvel.herokuapp.com/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=luveldb.crykg7arfln1.ap-southeast-1.rds.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=luvel_db
-DB_USERNAME=luveladmin
-DB_PASSWORD=luveladmin123!
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
