--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Luvel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:BP44hGiPB6mm7dMgnbPjoOe6YxvtCmKZBA1Q5TLLXSY=
-APP_DEBUG=false
-APP_URL=https://luvel.herokuapp.com/
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=amazondbrenciso.crykg7arfln1.ap-southeast-1.rds.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=luvel_db
-DB_USERNAME=luveladmin
-DB_PASSWORD=luveladmin123!
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
